--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ body {
 
 /* ===== HEADER SECTION ===== */
 header {
-  background: radial-gradient(circle at center, #0a84ff 0%, #0ad4a6 90%);
+  background: radial-gradient(circle at center, #0077ff 0%, #0ad4a6 90%);
   padding: 40px 20px;
   text-align: center;
   color: white;
@@ -24,7 +24,7 @@ header {
   overflow: hidden;
 }
 
-/* Arrows animation */
+/* Arrows around header */
 header::before, header::after {
   content: "➤";
   position: absolute;
@@ -48,29 +48,36 @@ header::after {
   100% { transform: rotate(360deg) translateX(120px) rotate(-360deg); }
 }
 
-/* Header content */
+/* Header content flex for shield + name */
 .header-content {
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 12px;
+  position: relative;
 }
+
+/* Shield styling */
 .shield {
   font-size: 3rem;
   color: #0ad4a6;
-  text-shadow: 0 0 10px #0a84ff;
+  text-shadow: 0 0 14px #0077ff;
   animation: pulseGlow 2.5s infinite alternate;
 }
+
+/* Glowing header text */
 header h1 {
   margin: 0;
   font-size: 3.5rem;
-  text-shadow: 0 0 25px #0ad4a6, 0 0 50px #0a84ff;
+  letter-spacing: 1px;
+  text-shadow: 0 0 25px #0ad4a6, 0 0 50px #0077ff;
   animation: pulseGlow 2.5s infinite alternate;
 }
 @keyframes pulseGlow {
-  0% { text-shadow: 0 0 20px #0ad4a6, 0 0 40px #0a84ff; }
-  100% { text-shadow: 0 0 40px #0ad4a6, 0 0 80px #0a84ff; }
+  0% { text-shadow: 0 0 20px #0ad4a6, 0 0 40px #0077ff; }
+  100% { text-shadow: 0 0 40px #0ad4a6, 0 0 80px #0077ff; }
 }
+
 header p {
   margin: 8px 0 0;
   font-size: 1.1rem;
@@ -86,11 +93,13 @@ header p {
   border-radius: 12px;
   box-shadow: 0 0 22px rgba(0,0,0,0.45);
 }
+
 h2 {
   color: #0ad4a6;
   border-bottom: 2px solid #0ad4a6;
   padding-bottom: 6px;
 }
+
 .status {
   font-size: 1.05rem;
   margin: 12px 0;
@@ -110,9 +119,9 @@ h2 {
   grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
   gap: 20px;
   margin-top: 20px;
+  align-items: stretch;
 }
 
-/* Card style */
 .card {
   background: #0f1620;
   padding: 20px;
@@ -124,7 +133,6 @@ h2 {
   height: 430px;
 }
 
-/* Threat Log */
 .threat-log {
   background: #000;
   color: #00ff66;
@@ -135,10 +143,11 @@ h2 {
   overflow-y: auto;
   border: 1px solid #0ad4a6;
   white-space: pre-wrap;
+  transition: 0.3s;
 }
 
 .btn {
-  background: #0a84ff;
+  background: #0077ff;
   color: white;
   border: none;
   padding: 10px 14px;
@@ -154,36 +163,77 @@ h2 {
   color: black;
 }
 
-/* ===== RED RIPPLE WAVE EFFECT ===== */
-.lights {
-  position: absolute;
-  left: -50px;
-  top: 50%;
-  transform: translateY(-50%);
-  width: 200px;
-  height: 200px;
-  display: none;
-  z-index: 10;
-}
-.wave {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
-  background: radial-gradient(circle, rgba(255, 0, 0, 0.9) 0%, rgba(255, 0, 0, 0.3) 60%, transparent 90%);
-  opacity: 0;
-  transform: scale(0.5);
-}
-.active-wave .wave {
-  animation: rippleExpand 1.5s ease-out infinite;
-}
-@keyframes rippleExpand {
-  0% { transform: scale(0.4); opacity: 0.9; }
-  70% { transform: scale(2); opacity: 0.4; }
-  100% { transform: scale(2.5); opacity: 0; }
+footer {
+  text-align: center;
+  padding: 16px;
+  margin-top: 18px;
+  color: #9aa3ad;
+  font-size: .95rem;
 }
 
-/* Responsive */
+canvas {
+  width: 100% !important;
+  max-height: 240px;
+  transition: 0.3s;
+}
+
+select, .small-input {
+  padding: 8px 10px;
+  border-radius: 6px;
+  border: none;
+  background: #0b1720;
+  color: #fff;
+  margin-right: 8px;
+}
+
+.metrics {
+  display: flex;
+  gap: 14px;
+  flex-wrap: wrap;
+  margin-top: 8px;
+}
+.metric {
+  background: #071018;
+  padding: 10px 12px;
+  border-radius: 8px;
+  box-shadow: inset 0 -2px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+}
+.metric strong {
+  display: block;
+  font-size: 1.05rem;
+  color: #fff;
+}
+
+.card h3 {
+  margin: 0 0 8px 0;
+  color: #cfeff2;
+}
+
+/* ===== RED RIPPLE WAVE EFFECT (REPLACED LIGHTS) ===== */
+.alert-wave {
+  position: absolute;
+  top: 55%;
+  left: 25%;
+  width: 180px;
+  height: 180px;
+  background: radial-gradient(circle, rgba(255,0,0,0.75) 0%, rgba(255,0,0,0) 80%);
+  border-radius: 50%;
+  transform: translate(-50%, -50%);
+  animation: ripple 1.2s infinite ease-out;
+  z-index: 1;
+  opacity: 0.9;
+  filter: blur(1px);
+  display: none;
+}
+
+@keyframes ripple {
+  0% { transform: translate(-50%, -50%) scale(0.5); opacity: 1; }
+  60% { transform: translate(-50%, -50%) scale(2); opacity: 0.4; }
+  100% { transform: translate(-50%, -50%) scale(3); opacity: 0; }
+}
+
+/* Responsive layout */
 @media (max-width: 768px) {
   .grid { grid-template-columns: 1fr; }
   .card { height: auto; }
@@ -206,106 +256,134 @@ h2 {
   <h2>System Overview</h2>
   <p class="status">Status: <span id="systemStatus" class="online">Online — Monitoring</span></p>
 
+  <div class="metrics">
+    <div class="metric"><small>Active AI Scans</small><strong id="scanCount">0</strong></div>
+    <div class="metric"><small>Threats Neutralized</small><strong id="neutralized">0</strong></div>
+    <div class="metric"><small>AI Confidence</small><strong id="confidence">98%</strong></div>
+    <div class="metric"><small>Connected Systems</small><strong id="connectedCount">3</strong></div>
+    <div class="metric"><small>Predicted Threats</small><strong id="predictedThreats">0</strong></div>
+  </div>
+
   <div class="grid">
     <section class="card">
       <h3>Threat Log</h3>
       <div class="threat-log" id="threatLog">[System Initialized]<br></div>
       <div style="margin-top:10px;">
+        <button class="btn" onclick="autoDemo()">Auto Demo Mode</button>
         <button class="btn" onclick="simulateThreat()">Random Threat</button>
-        <button class="btn" onclick="testLights()">Test Alert Wave</button>
+        <button class="btn" onclick="activateLearning()">Train AI (Quick)</button>
         <button class="btn" onclick="clearLog()">Clear Log</button>
+        <button class="btn" onclick="predictThreat()">Predict Threat</button>
+        <button class="btn" onclick="autoContain()">Auto Contain Threats</button>
+        <button class="btn" onclick="generateComplianceReport()">Compliance Report</button>
+        <button class="btn" onclick="simulateCyberDrill()">Cyber Drill</button>
+        <button class="btn" onclick="testLights()">Test Alert Wave</button>
       </div>
     </section>
 
     <section class="card">
-      <!-- 🔴 Red Ripple Wave positioned left of System Health -->
-      <div id="emergency-lights" class="lights">
-        <div class="wave"></div>
+      <h3>Threat Intelligence Feed</h3>
+      <ul id="intelFeed" style="padding-left:16px; margin-top:8px;"></ul>
+      <hr style="border:0;border-top:1px solid rgba(10,212,166,.08); margin:12px 0;" />
+      <div>
+        <h4>Connected Systems</h4>
+        <p style="color:#9aa3ad; font-size:.95rem;">Simulated external systems.</p>
+        <select id="externalSystem" class="small-input">
+          <option value="FinanceServer">FinanceServer</option>
+          <option value="HRPortal">HRPortal</option>
+          <option value="CloudDB">CloudDB</option>
+          <option value="Manufacturing-IoT">Manufacturing-IoT</option>
+          <option value="RetailPOS">RetailPOS</option>
+        </select>
+        <button class="btn" onclick="scanExternal()">Scan System</button>
       </div>
+    </section>
 
+    <section class="card">
+      <h3>Threat Analytics</h3>
+      <canvas id="threatChart"></canvas>
+    </section>
+
+    <section class="card">
+      <div class="alert-wave" id="alertWave"></div>
       <h3>System Health</h3>
       <p>CPU Load: <span id="cpuLoad">23%</span></p>
       <p>Memory Usage: <span id="memory">48%</span></p>
       <p>Network Latency: <span id="latency">32ms</span></p>
+      <h4>Manual Input Detection</h4>
       <input id="manualInput" class="small-input" placeholder="Paste suspicious payload" style="width:100%; margin-bottom:10px;" />
       <div>
         <button class="btn" onclick="detectManual()">Analyze Input</button>
+        <button class="btn" onclick="generateReport()">Generate Report</button>
       </div>
     </section>
   </div>
 </main>
 
-<footer style="text-align:center; padding:16px; color:#9aa3ad;">Built for Hackathon 2025 | MellowSecure AI Cybersecurity</footer>
+<footer>Built for Hackathon 2025 | MellowSecure AI Cybersecurity</footer>
 
 <audio id="sirenSound" src="https://actions.google.com/sounds/v1/emergency/car_alarm.ogg" preload="auto"></audio>
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script>
-const log = document.getElementById('threatLog');
-const status = document.getElementById('systemStatus');
-const audio = document.getElementById('sirenSound');
+const log=document.getElementById('threatLog');
+const status=document.getElementById('systemStatus');
+const intelFeed=document.getElementById('intelFeed');
+const scanCount=document.getElementById('scanCount');
+const neutralized=document.getElementById('neutralized');
+const confidence=document.getElementById('confidence');
+const audio=document.getElementById('sirenSound');
+const alertWave=document.getElementById('alertWave');
 
-function addLog(msg) {
-  const ts = new Date().toLocaleTimeString();
-  log.innerHTML += `[${ts}] ${msg}<br>`;
-  log.scrollTop = log.scrollHeight;
-}
+let threats={DDoS:0,SQL:0,Malware:0,Phishing:0},scans=0,neutralizedCount=0,predictedCount=0;
 
-function playSiren(){ audio.currentTime=0; audio.play().catch(()=>{}); }
+const ctx=document.getElementById('threatChart');
+const threatChart=new Chart(ctx,{type:'doughnut',data:{labels:['DDoS','SQL Injection','Malware','Phishing'],datasets:[{data:[0,0,0,0],backgroundColor:['#0077ff','#ff3b3b','#ffa500','#0ad4a6']} ]}, options:{plugins:{legend:{labels:{color:'#fff'}}},maintainAspectRatio:false}});
+
+function updateChart(){ threatChart.data.datasets[0].data=[threats.DDoS,threats.SQL,threats.Malware,threats.Phishing]; threatChart.update(); }
+function addLog(msg){ const ts=new Date().toLocaleTimeString(); log.innerHTML+=`[${ts}] ${msg}<br>`; log.scrollTop=log.scrollHeight; }
+function addIntel(msg){ const li=document.createElement('li'); li.textContent=msg; intelFeed.prepend(li); if(intelFeed.childElementCount>8) intelFeed.removeChild(intelFeed.lastChild); }
+
+function simulateThreat(){ const types=['DDoS','SQL Injection','Malware','Phishing']; simulateSpecific(types[Math.floor(Math.random()*types.length)]); }
+
+function playSiren(){ audio.currentTime=0; audio.volume=1; audio.play().catch(()=>console.log('Click required for audio')); }
 function stopSiren(){ audio.pause(); audio.currentTime=0; }
 
-function activateEmergencyLights() {
-  const lights = document.getElementById('emergency-lights');
-  lights.style.display = 'block';
-  lights.classList.add('active-wave');
+function activateAlertWave(){ 
+  alertWave.style.display='block'; 
   playSiren();
-  setTimeout(() => {
-    lights.classList.remove('active-wave');
-    lights.style.display = 'none';
-    stopSiren();
-  }, 6000);
+  setTimeout(()=>{ alertWave.style.display='none'; stopSiren(); },8000);
+}
+function testLights(){ activateAlertWave(); }
+
+function simulateSpecific(type){ 
+  scans++; scanCount.innerText=scans; 
+  addLog(`${type} detected. Deploying countermeasures...`); 
+  status.className='alert'; 
+  status.innerText=`Mitigating ${type}...`; 
+  activateAlertWave(); 
+  setTimeout(()=>{ 
+    addLog(`${type} neutralized.`); 
+    threats[type==='SQL Injection'?'SQL':type]++; 
+    neutralizedCount++; 
+    neutralized.innerText=neutralizedCount; 
+    addIntel(`${type} threat blocked.`); 
+    status.className='online'; 
+    status.innerText='Online — Monitoring'; 
+    updateChart(); 
+  },2000); 
 }
 
-function testLights() {
-  const lights = document.getElementById('emergency-lights');
-  if (lights.style.display === 'none' || !lights.style.display) {
-    lights.style.display = 'block';
-    lights.classList.add('active-wave');
-    playSiren();
-    setTimeout(() => {
-      lights.classList.remove('active-wave');
-      lights.style.display = 'none';
-      stopSiren();
-    }, 6000);
-  } else {
-    lights.classList.remove('active-wave');
-    lights.style.display = 'none';
-    stopSiren();
-  }
-}
+function clearLog(){ log.innerHTML='[System Reset]<br>'; status.className='online'; status.innerText='Online — Monitoring'; }
+function detectManual(){ const val=document.getElementById('manualInput').value.trim(); if(!val) return; addLog(`Analyzing input: ${val}`); setTimeout(()=>{ if(val.toLowerCase().includes('hack')||val.toLowerCase().includes('attack')) simulateSpecific('SQL Injection'); else addLog('Input appears safe.'); },1000); }
+function scanExternal(){ const sys=document.getElementById('externalSystem').value; addLog(`Scanning external system: ${sys}...`); status.className='alert'; status.innerText=`Scanning ${sys}...`; setTimeout(()=>{ addLog(`Scan complete. ${sys} secure.`); addIntel(`${sys} scanned and safe.`); status.className='online'; status.innerText='Online — Monitoring'; },2000); }
 
-function simulateThreat() {
-  addLog("Threat detected! Activating defense protocols...");
-  status.className = 'alert';
-  status.innerText = 'Threat Detected — Responding...';
-  activateEmergencyLights();
-  setTimeout(() => {
-    addLog("Threat neutralized successfully.");
-    status.className = 'online';
-    status.innerText = 'Online — Monitoring';
-  }, 5000);
-}
-
-function detectManual() {
-  const val = document.getElementById('manualInput').value.trim();
-  if (!val) return;
-  addLog("Analyzing input...");
-  setTimeout(() => {
-    addLog("Input appears safe.");
-  }, 1500);
-}
-
-function clearLog() {
-  log.innerHTML = '[System Reset]<br>';
-}
+function autoDemo(){ let count=0; const demo=setInterval(()=>{ simulateThreat(); count++; if(count>5) clearInterval(demo); },2500); }
+function activateLearning(){ addLog('AI training initiated...'); setTimeout(()=>{ addLog('AI training complete. Confidence improved.'); confidence.innerText='99%'; },2000); }
+function predictThreat(){ addLog('Predicting potential threats...'); setTimeout(()=>{ predictedCount++; document.getElementById('predictedThreats').innerText=predictedCount; addIntel('Potential threat predicted.'); },1500); }
+function autoContain(){ addLog('Automatically containing detected threats...'); setTimeout(()=>{ addLog('All active threats contained.'); },1500); }
+function generateComplianceReport(){ addLog('Generating compliance report...'); setTimeout(()=>{ addLog('Compliance report ready.'); },1500); }
+function simulateCyberDrill(){ addLog('Simulating cyber drill...'); setTimeout(()=>{ addLog('Cyber drill completed successfully.'); },2000); }
+function generateReport(){ addLog('Generating quick security report...'); setTimeout(()=>{ addLog('Security report completed.'); },2000); }
 </script>
 </body>
 </html>
